K8S/angular-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-depl
spec:
  selector:
    matchLabels:
      app: angular
  replicas: 1
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
      - name: angular
        image: mydockertrail/angular
---
apiVersion: v1
kind: Service
metadata:
  name: angular-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: angular
  ports:
  - name: angular
    protocol: TCP
    port: 80
    targetPort: 80
