K8S/aspui-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspui-srv
spec:
  type: NodePort
  selector:
    app: aspui
  ports:
    - name: aspui
      protocol: TCP
      port: 80
      targetPort: 80
