K8S/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: mydockertrail/auth:latest
---
apiVersion: v1
kind: Service
metadata:
  name: auth-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
  - name: auth
    protocol: TCP
    port: 80
    targetPort: 80
