K8S/resource-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resource
  template:
    metadata:
      labels:
        app: resource
    spec:
      containers:
        - name: resource
          image: mydockertrail/resource:latest
---
apiVersion: v1
kind: Service
metadata:
  name: resource-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: resource
  ports:
  - name: resource
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: resource-srv
spec:
  type: NodePort
  selector:
    app: resource
  ports:
    - name: resource
      protocol: TCP
      port: 80
      nodePort: 30038
      targetPort: 80
